@@ -1,1 +1,1 @@
-cascading.release.version=0.5.0
+cascading.release.version=0.5.1
